--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "luch-request": "^3.1.1",
     "pinia": "^2.1.4",
     "pinia-plugin-persistedstate": "^3.2.3",
+    "pinia-plugin-piniastorage": "^1.2.0",
     "qrcode": "^1.5.3",
     "qrcodejs2": "^0.0.2",
     "vue-i18n": "^11.1.10"
