查单页修改

--- a/.prettierignore
+++ b/.prettierignore
@@ -3,5 +3,4 @@ dist
 *.log
 *.lock
 unpackage
-uni_modules/z-paging/components/z-paging/z-paging.vue
-uni_modules/uview-plus/libs/mixin/mixin.js
+uni_modules
