修改核心配置

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 	"name": "易单据",
 	"appid": "__UNI__87FAB0A",
 	"description": "",
-	"versionName": "1.0.1",
-	"versionCode": 101,
+	"versionName": "1.0.2",
+	"versionCode": 102,
 	"transformPx": false,
 	/* 5+App特有相关 */
 	"app-plus": {
@@ -12,8 +12,8 @@
 		"nvueStyleCompiler": "uni-app",
 		"compilerVersion": 3,
 		"splashscreen": {
-			"alwaysShowBeforeRender": true,
-			"waiting": true,
+			"alwaysShowBeforeRender": false,
+			"waiting": false,
 			"autoclose": true,
 			"delay": 0
 		},
@@ -21,8 +21,7 @@
 		"modules": {
 			"Payment": {},
 			"Share": {},
-			"OAuth": {},
-			"Push": {}
+			"OAuth": {}
 		},
 		/* 应用发布信息 */
 		"distribute": {
@@ -48,11 +47,14 @@
 					"<uses-permission android:name=\"android.permission.READ_EXTERNAL_STORAGE\"/>",
 					"<uses-permission android:name=\"android.permission.WRITE_EXTERNAL_STORAGE\"/>"
 				],
-				"minSdkVersion": 21
+				"minSdkVersion": "",
+				"targetSdkVersion": "",
+				"abiFilters": ["armeabi-v7a", "arm64-v8a"]
 			},
 			/* ios打包配置 */
 			"ios": {
-				"dSYMs": false
+				"dSYMs": false,
+				"idfa": false
 			},
 			/* SDK配置 */
 			"sdkConfigs": {
