--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"clipboard": "^2.0.11",
 		"dayjs": "^1.11.13",
+		"decimal.js": "^10.6.0",
 		"echarts": "^5.4.3",
 		"html2canvas": "^1.4.1",
 		"luch-request": "^3.1.1",
