app模块配置相机和相册

--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,8 @@
             "Payment" : {},
             "Share" : {},
             "OAuth" : {},
-            "Push" : {}
+            "Push" : {},
+            "Camera" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
